--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
   <!-- Google Font Cookie -->
-  <link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
 
   <!-- My Stylesheets -->
   <link rel="stylesheet" type="text/css" href="css/dlsHomeStylz.css">
